feat(test) checking a bot category from the available list
issue #5727

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -710,7 +710,7 @@
 
 - regex: 'ips-agent'
   name: 'IPS Agent'
-  category: 'crawler'
+  category: 'Crawler'
   producer:
     name: 'VeriSign, Inc'
     url: 'http://www.verisign.com/'
