feat(device) detect brand Videocon model: Infinium Z50 Nova fix: YAML Lint

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9847,11 +9847,11 @@ True Slim:
 
 # Maze Speed (ssbphones.com)
 Maze Speed:
- regex: '(SSB-(?:500|508)|SSB408D|SSB504R)(?:[);/ ]|$)'
- device: 'smartphone'
- models:
-   - regex: 'SSB-?(500|508|408D|504R)(?:[);/ ]|$)'
-     model: 'SSB-$1'
+  regex: '(SSB-(?:500|508)|SSB408D|SSB504R)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'SSB-?(500|508|408D|504R)(?:[);/ ]|$)'
+      model: 'SSB-$1'
 
 # Maze (mazephone.com)
 Maze:
@@ -15588,7 +15588,7 @@ Vestel:
 
 # Videocon
 Videocon:
-  regex: 'Videocon[_ \-]|(?:VT75C|V406018|V50(?:2430|3630|5024|5430|4630|5[98]20)|Z45_(?:Dazzle|Amaze)|Z45Q Star)(?:[);/ ]|$)'
+  regex: 'Videocon[_ \-]|(?:VT75C|V406018|V50(?:2430|3630|5024|5430|4630|5[98]20)|Z45_(?:Dazzle|Amaze)|Z45Q Star|Z50 Nova)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Videocon_V1585'
@@ -15617,6 +15617,8 @@ Videocon:
       model: 'Infinium Z45 $1'
     - regex: 'Z45Q Star(?:[);/ ]|$)'
       model: 'Infinium Z45Q Star'
+    - regex: 'Z50 Nova(?:[);/ ]|$)'
+      model: 'Infinium Z50 Nova'
 
 # Vodafone
 Vodafone:
