fix: the correct device type is set for the model `Nitro Phablet 9s` feat(test) added test to check if the specified device type is correct

--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -2550,7 +2550,7 @@
     engine: Blink
     engine_version: ""
   device:
-    type: smartphone
+    type: tablet
     brand: Maxwest
     model: Nitro Phablet 9s
   os_family: Android
