--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9965,3 +9965,39 @@
     model: ""
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; TVB-906X Build/MHC19J)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tv
+    brand: InfoKit
+    model: TVB-906X
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 7.1; Beelink GS1 Build/NRD91N)
+  os:
+    name: Android
+    version: "7.1"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tv
+    brand: Beelink
+    model: GS1
+  os_family: Android
+  browser_family: Android Browser
