--- a/regexes/client/libraries.yml
+++ b/regexes/client/libraries.yml
@@ -130,3 +130,7 @@
 - regex: 'Embarcadero URI Client/([\.\d]+)'
   name: 'Embarcadero URI Client'
   version: '$1'
+
+- regex: 'Mikrotik/([\.\d]+)'
+  name: 'Mikrotik Fetch'
+  version: '$1'
