feat(device) detect brand Samsung model: Galaxy A52 (SM-A525F)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13037,6 +13037,8 @@ Samsung:
       model: 'Galaxy A5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A520[FKLSWX]'
       model: 'Galaxy A5 (2017)'
+    - regex: '(?:SAMSUNG-)?SM-A525F'
+      model: 'Galaxy A52'
     - regex: '(?:SAMSUNG-)?SM-A600(?:AZ|FN|GN|T1|[AFGNPTUX])'
       model: 'Galaxy A6'
     - regex: '(?:SAMSUNG-)?SM-A605(?:[FG]N|[08FGX])'
